src/components/bs5/header/header.scss
@use "./header-variables" with (
  $prefix: $prefix
);

// Play nice with navbar header.
:root {
  --qld-header-preheader-height: 52px;

  @include media-breakpoint-up(md) {
    --qld-header-preheader-height: 72px;
  }

  @include media-breakpoint-up(lg) {
    --qld-header-preheader-height: 36px;
  }
}

.qld-header {
  @extend %header-variables;
  color: var(--#{$prefix}header-color-text);
  background: var(--#{$prefix}header-color-bg);
  font-size: 1rem;

  @include media-breakpoint-up(sm) {
    font-size: 1.25rem;
  }

  &-pre-header {
    //
    display: flex;
    align-items: center;
    font-size: 0.875rem; // set here so whitespace doesn't add extra height.
    color: var(--#{$prefix}header-pre-header-color-text);
    background-color: var(--#{$prefix}header-pre-header-color-bg);
    box-shadow: var(--#{$prefix}header-pre-header-boxshadow);
    position: relative;
    z-index: 2;
    height: var(--qld-header-preheader-height);

    .qld-header-main-nav-controls {
      display: flex;
      flex-direction: row;
      justify-content: end;
      position: absolute;
      right: 0;
      top: 0;

      @include media-breakpoint-up(lg) {
        display: none;
      }
    }

    .qld-header-toggle-main-nav {
      align-items: center;
      appearance: none;
      background-color: transparent;
      border: 0;
      border-left: 1px solid
        var(--#{$prefix}header__toggle-main-nav_border_color);
      color: var(--#{$prefix}header__toggle-main-nav_text_color);
      cursor: pointer;
      display: flex;
      flex-direction: column;
      font-size: 0.875rem;
      line-height: 1.14;
      padding: 0.5rem 1rem;

      &:hover {
        background-color: var(--#{$prefix}header__toggle-main-nav__hover_bg);

        svg {
          color: var(--#{$prefix}header__toggle-main-nav__hover_svg_color);
        }
      }

      &:focus {
        outline: 3px solid
          var(--#{$prefix}header__toggle-main-nav__focus_outline_color);
        outline-offset: 2px;
      }

      @include media-breakpoint-up(md) {
        padding: 0.75rem 1rem 0.625rem 1rem;
      }

      &-text {
        font-size: 0.625rem;
        margin-top: 0.125rem;

        @include media-breakpoint-up(md) {
          font-size: 0.875rem;
          line-height: 1.14;
        }

        @include media-breakpoint-up(lg) {
          font-size: 1rem;
          line-height: 1.5;
        }
      }

      &:before {
        display: block;
        font-size: 1rem;
        line-height: 1;
        margin-bottom: 0.25rem;
        text-align: center;
      }

      svg {
        height: 1.25rem;
        margin: 1px auto;
        width: 1.25rem;
        color: var(--#{$prefix}header__toggle-main-nav__svg_color);

        @include media-breakpoint-up(md) {
          height: 2rem;
          margin: 0 auto;
          width: 2rem;
        }
      }
    }
  }

  &-link {
    font-size: 0.875rem;
    line-height: 1;

    &,
    &:visited {
      color: var(--qld-header-pre-header-color-link) !important;
      text-decoration: none;
      text-decoration-color: var(
        --#{$prefix}header-pre-header-color-link-decoration
      ) !important;
      text-decoration-thickness: 0.5px;
      text-underline-offset: 0.3em;
      text-decoration-skip-ink: auto;
    }

    &:focus,
    &:hover {
      text-decoration: underline;
      text-decoration-color: var(
        --#{$prefix}header-pre-header-color-link-decoration-focus
      ) !important;
      text-decoration-thickness: 2px;
    }

    &:disabled,
    a[disabled] {
      text-decoration: none;
    }

    &.has-no-underline {
      &:focus,
      &:hover {
        text-decoration: none;
      }
    }
  }

  &-link-icon {
    height: 1.25rem;
    width: 1.25rem;
    margin-right: 0.5rem;
    color: var(--#{$prefix}header__cta-wrapper__cta-link-icon_color);
  }

  &-logo {
    display: block;
    width: auto;

    a:hover & {
      filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.08))
        drop-shadow(0 13px 20px rgba(0, 0, 0, 0.08));
    }

    .qld-header-pre-header & {
      height: 1.75rem;

      @include media-breakpoint-up(md) {
        height: 2.5rem;
      }

      @include media-breakpoint-up(lg) {
        display: none;
      }
    }
  }

  // Preheader CTA dropdown - custom functionality:
  .dropdown {
    line-height: 1.5;
  }

  .dropdown-menu {
    // Bootstrap defined custom properties
    --#{$prefix}dropdown-link-hover-bg: transparent;
    --#{$prefix}dropdown-link-active-bg: transparent;
    //
    width: 20.25rem;
    min-height: 1rem;
    padding: 0rem 2rem 1.75rem;
    border-radius: 0 0 0.75rem 0.75rem;
    border: 0;
    background-color: var(
      --#{$prefix}header__cta-wrapper__cta-link_dropdown_bg_color
    );
    box-shadow: var(--#{$prefix}header-pre-header-boxshadow);
    margin-top: 0.8rem !important; // Overrides the default bs-popper margin

    &::before {
      position: absolute;
      content: " ";
      height: 6px;
      top: -6px;
      left: 0;
      right: 0px;
      background-color: var(
        --#{$prefix}header__cta-wrapper__cta-link_dropdown_bg_color
      );
      pointer-events: none; // so that pseudo-element isn't clickable
    }

    hr {
      margin: 1.5rem 0;
      color: var(--#{$prefix}header__CTA_border_color);
      border-color: var(--#{$prefix}header__CTA_border_color);
      opacity: 1;
    }

    p {
      font-size: 0.875rem;
      line-height: 1.5;
    }

    a.btn-primary {
      margin: 1.25rem 0 0.5rem 0;
      text-decoration-color: inherit;
      text-decoration-thickness: inherit;
    }

    .group {
      a {
        font-weight: 600;
        color: var(--#{$prefix}header__CTA_text_color);
        text-decoration: underline var(--#{$prefix}header__CTA_text_color);

        &:visited {
          color: var(--#{$prefix}header__CTA_text_color);
        }
      }
    }
  }

  ul.dropdown-menu.show:has(> li) {
    padding-bottom: 1.25rem;
  }

  .dropdown-item {
    position: relative;
    border-bottom: solid 1px var(--#{$prefix}header__CTA_border_color);
    padding: 1rem 1.75rem 1rem 0;
    line-height: 1.5;

    &:visited {
      color: var(--#{$prefix}header__CTA_text_color);
    }

    span,
    svg {
      vertical-align: middle;
    }
  }

  &-dropdown-icon {
    vertical-align: middle;
    margin-left: 0.5rem;
    color: var(--#{$prefix}header__cta-wrapper__cta-link-icon_color);
    height: 1rem;
    width: 1rem;
  }

  &-dropdown-item-icon {
    color: var(--#{$prefix}header__cta-wrapper__cta-link-icon_color);
    position: absolute;
    right: 0;
  }

  &-main {
    position: relative;
  }

  &-brand {
    font-variant-numeric: lining-nums;
    text-decoration: none;

    &:hover {
      color: var(--#{$prefix}header__brand__anchor__hover_text_color);

      .qld-header-brand-image {
        color: var(
          --#{$prefix}header__brand__anchor__hover_brand-image__text_color
        );
      }

      .qld-header-heading,
      .qld-header-subline {
        color: var(
          --#{$prefix}header__brand__anchor__hover_headingsubline__text_color
        );
        text-decoration: underline;
        text-decoration-color: currentColor !important;
      }
    }

    @include media-breakpoint-up(lg) {
      display: inline-flex;
      align-items: center;
    }
  }

  &-brand-image {
    display: none;
    color: var(--#{$prefix}header__brand-image__crest_fill);

    @include media-breakpoint-up(lg) {
      display: block;
    }

    &.is-subtype {
      border-right: 2px solid
        var(--#{$prefix}header__brand-image__subtype__border_color);
      color: var(--#{$prefix}header__brand-image__subtype__text_color);
      margin-right: 1.5rem;
      padding-right: 1.5rem;
    }

    img {
      margin: auto 0;
      display: block;
    }

    svg {
      vertical-align: text-bottom;
    }
  }

  &-site-name {
    display: flex;
    flex-wrap: wrap;
    align-items: baseline;
    text-wrap: balance;

    @include media-breakpoint-up(lg) {
      flex-direction: column;
      flex-wrap: nowrap;
      justify-content: center;
    }
  }

  &-secondary-image {
    height: 2.5rem;

    @include media-breakpoint-up(md) {
      height: 3.5rem;
    }
  }

  &-heading {
    font-size: 1rem;
    font-weight: 700;
    line-height: 1.25;
    margin: 0 1ch 0 0;
    padding: 0;
    font-family: $font-family-sitename;
    color: var(--#{$prefix}header__site-name__heading__text_color);

    @include media-breakpoint-up(md) {
      font-size: 1.25rem;
      line-height: 1.2;
    }
  }

  &-subline {
    color: var(--#{$prefix}header__site-name__subline__text_color);
    font-size: 0.875rem;
    line-height: 1.14;
    max-width: 80ch;

    @include media-breakpoint-up(md) {
      font-size: 1rem;
      line-height: 1.25;
    }
  }

  //Reduce size of whitebar on masterbrand
  &.is-masterbrand {
    @include media-breakpoint-down(lg) {
      height: 0;
    }
  }

  &-site-search {
    form {
      display: flex;
      position: relative;
    }

    @include media-breakpoint-down(lg) {
      // Mobile search open class
      &.is-open {
        z-index: 1;
        display: block;
        position: absolute;
        left: 0;
        right: 0;
        top: 0.4rem;
        padding: 1rem 0;
        background-color: var(--#{$prefix}header-color-bg);
      }
      &.is-closed {
        display: none;
      }
    }

    // Some default styling overrides.
    @include media-breakpoint-up(lg) {
      .container {
        display: contents;
      }
    }

    .qld-search-input {
      min-width: auto;
    }
  }
}

